Changes in 0.60.0:
  * changed changesets to compress individual files instead of the combined
    stream
  * cleaned up file content objects to no longer track file sizes
  * switched away from TupleStream to StreamSet for both better performance
    and improved flexibility in the format (at the price of larger
    frozen streams)

Changes in 0.50.14:
  * Dependency checking now returns reordering information (which isn't
    used yet)
  * Allow groups to include other groups defined in the same recipe (but
    explicitly disallow cycles in groups)
  * Fixed bug in building multiple groups with a single recipe when some
    of the groups already exist, but others don't

Changes in 0.50.13:
  * Added automatic :data component for /usr/share, to which you should
    add any platform-independent files that are needed by :lib components
    but not in a libdir-derived path.  These might include configuration
    files and supporting data files needed by both library and runtime
    programs.
  * Added automatic intra-package inter-component dependencies; now within
    a single package, the :devel component will automatically require the
    :lib component if both components exist.  These dependency sets can be
    modified with the ComponentRequires policy.
  * The build/buildpackage.py file has variable and function names changed
    to better match our terminology for packages and components.
  * Change flavor specified in the conaryrc to a flavor path -- accept the 
    flavor config parameter multiple times to create a flavor path
  * Added a "filewrap" argument to r.Run() that inserts an LD_PRELOAD
    wrapper that overrides some library funtions to look in %(destdir)s
    first before looking in the filesystem.  This is subject to change
    as we experiment with it!

Changes in 0.50.12:
  * Implemented --quiet for conary update changeset commands, and cvc cook.
    Also implemented the 'quiet' configuration value. This option suppresses